--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                                     <h4 class="subheading">THE COLLEGE YEARS</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Graduated in Psychology but enjoyed classes in architecture, theatre, philosophy, screenwriting, etc. Coached tennis, basketball, and chess to underserved communities. Interned at a branding agency <a href="http://www.heartbeatideas.com/" target="_blank">Heartbeat Ideas</a> one summer and taught 7th Grade Sceince at <a href="https://www.breakthroughcollaborative.org/" target="_blank">Breakthrough Collaborative</a> another summer. </p>
+                                    <p>Graduated in Psychology but enjoyed classes in architecture, theatre, philosophy, screenwriting, etc. Coached tennis, basketball, and chess to underserved communities. Interned at a branding agency <a href="http://www.heartbeatideas.com/" target="_blank">Heartbeat Ideas</a> one summer and taught 7th Grade Sceince at <a href="https://www.breakthroughcollaborative.org/" target="_blank">Breakthrough Collaborative</a> another summer. </p>
                                 </div>
                             </div>
                         </li>
@@ -297,7 +297,7 @@
                                     <h4 class="subheading">WORKING IN AUTISM</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">I led classes, clubs, and workshops at the globally-recognized <a href="http://www.autismcenter.org/" target="_blank">Southwest Autism Resource and Research Center</a>.Spearheaded volunteer activities with local nonprofits, assisted in research efforts, and helped adults acquire jobs and learn those jobs on-site - this is just a nibble of the great things I was able to do at SARRC. </p>
+                                    <p>I led classes, clubs, and workshops at the globally-recognized <a href="http://www.autismcenter.org/" target="_blank">Southwest Autism Resource and Research Center</a>. Spearheaded volunteer activities with local nonprofits, assisted in research efforts, and helped adults acquire jobs and learn those jobs on-site - this is just a nibble of the great things I was able to do at SARRC. </p>
                                 </div>
                             </div>
                         </li>
@@ -311,20 +311,10 @@
                                     <h4 class="subheading">GROWING A BUSINESS</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">With my experience at <a href="http://fracturedprune.com/" target="_blank">Fractured Prune Doughnuts</a>, I held just about every title imaginable - supply chain manager, social media lead, HR director, digital product manager, business designer. I learned what it takes (A LOT!) to get a business off the ground and wouldn’t take that experience back for anything. 
+                                    <p>With my experience at <a href="http://fracturedprune.com/" target="_blank">Fractured Prune Doughnuts</a>, I held just about every title imaginable - supply chain manager, social media lead, HR director, digital product manager, business designer, etc. I learned what it takes (A LOT!) to get a business off the ground and wouldn’t take that experience back for anything. 
                                     </p>
                                 </div>
-                            </div>
-<!--                             <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>2014-2015</h4>
-                                    <h4 class="subheading">Fake Crow</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">With my experience at <a href="http://fracturedprune.com/" target="_blank">Fractured Prune Doughnuts</a>, I held just about every title imaginable - supply chain manager, social media lead, HR director, digital product manager, business designer. I learned what it takes (A LOT!) to get a business off the ground and wouldn’t take that experience back for anything. 
-                                    </p>
-                                </div>
-                            </div> -->
+                            </div> 
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
@@ -332,22 +322,22 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>JUNE 2015 - OCTOBER 2015</h4>
-                                    <h4 class="subheading">BOOTCAMP TIME</h4>
+                                    <h4>2015-Present</h4>
+                                    <h4 class="subheading">DESIGNATION and Fake Crow</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">I cannot speak highly enough about my experience at <a href="http://designation.io/blog/interview-danny-luber/" target="_blank">DESIGNATION</a>. Four months, 70 hours/week - this very rigorous UX/UI/Front end development bootcamp provided the space and instruction for me learn the theory and technical skills behind product design.</p>
+                                    <p>Following a 4-month bootcamp at DESIGNATION (you can read more about my experience <a href="http://designation.io/blog/interview-danny-luber/" target="_blank">here</a>) - I joined the team at <a href="http://fakecrow.com" target="_blank">Fake Crow</a>. I worked primarily on the internal product <a href="http://xtensio.com" target="_blank">Xtensio</a> while also designing and product managing for other client projects.</p>
                                 </div>
                                 
                             </div>
                         </li>
-                        <li class="timeline-inverted">
+<!--                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4>Are
-                                    <br>You
+                                <h4>Let's 
+                                    <br>Connec
                                     <br>Next?</h4>
                             </div>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
@@ -991,7 +981,7 @@ Pictured are various related screenshots. Consistent production and engagement o
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <h1>Pursuits</h1>
-                           <!--  <p class="item-intro text-muted">Making career transitions stress-free and highly productive</p> -->
+                            <p class="item-intro text-muted">Making career transitions stress-free and highly productive</p>
                             <img class="img-responsive img-centered" src="img/pursuits/desktop.jpg" alt="">
                             <p>PURSUITS is a startup based in Chicago currently in <a href="https://beta.pursuits.co/" target="_blank">beta version</a>. Its purpose is to provide an organizational hub for those applying to new jobs/pursuing career transitions. The web application follows a similar interaction to that of <a href="https://trello.com/" target="_blank">Trello</a> in which the user clicks and drags customizable cards between categories/columns.<br><br>
 
@@ -1060,7 +1050,7 @@ I created this video using Keynote's animation effects.
                         <div class="modal-body">
                             <!-- PULSEBAND PROJECT DETAILS Go Here -->
                             <h1>Pulseband</h1>
-                            <!-- <p class="item-intro text-muted" "tagline">Developing a heart-focused wearable technology</p> -->
+                            <p class="item-intro text-muted">Developing a heart-focused wearable technology</p>
                             <img class="img-responsive img-centered" src="img/pulseband/mockup.jpg" alt"">
                             <p>
 To simulate a start-to-finish product development cycle, we at DESIGNATION developed a mock product, the Pulseband. The Pulseband is a wearable technology that measures users’ blood pressure, heart rate, steps, sleep patterns among other vitals. The purpose of this project was to define the scope of the the Pulseband’s capabilities and develop a mobile app alongside those functionalities. Over the course of the project, we implemented various product development methodologies such as <a href="https://www.wikiwand.com/en/Scrum_(software_development)" target="_blank">scrum</a> and the <a href="http://www.gv.com/sprint/" target="_blank">Google 5-Day Sprint</a>.<br><br>
