--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                     <li>
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a class="page-scroll" href="#about">About</a>
-                    </li>
+                    </li> -->
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
@@ -86,7 +86,7 @@
                 <div class="intro-lead-in"> </div>
                 
                 <div class="intro-heading animated fadeIn">Danny Luber</div>
-                <h3 class="animated fadeIn">Designer  |  Researcher  |  Product Manager  |  Writer </h3>
+                <h3 class="animated fadeIn">Designer  |  Researcher  |  Strategist |  Writer </h3>
                 <a href="#portfolio" class="page-scroll btn btn-xl animated bounceInUp">Learn More</a>
             </div>
         </div>
@@ -262,8 +262,8 @@
     </div>
     </section>
   <!-- About Section -->
-    <section id="about">
-        <div class="container">
+<!--     <section id="about"> -->
+        <!-- <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About</h2>
@@ -338,11 +338,11 @@
                                     <br>Next?</h4>
                             </div>
                         </li> -->
-                    </ul>
+       <!--              </ul>
                 </div>
             </div>
-        </div>
-    </section>
+        </div> -->
+  <!--   </section> --> -->
 
 
 
