--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="intro-lead-in"> </div>
                 
                 <div class="intro-heading animated fadeIn">Danny Luber</div>
-                <h3 class="animated fadeIn">Designer  |  Researcher  |  Strategist |  Writer </h3>
+                <h3 class="animated fadeIn">Designer  |  Researcher  |  Product Manager |  Writer </h3>
                 <a href="#portfolio" class="page-scroll btn btn-xl animated bounceInUp">Learn More</a>
             </div>
         </div>
